--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body{
     height: 100vh;
     display: flex;
     flex-direction:column;
-    align-items: left;
+    align-items: center;
     background-color: rgb(200, 214, 237);
     color: rgb(0, 0, 0);
-    justify-content: left;
+    justify-content: center;
 }
 
 h1{
